add sample-post.py, sample-post.txt

--- a/sample.ipynb
+++ b/sample.ipynb
@@ -51,9 +51,9 @@
     "handle = \"<your handle>\"\n",
     "password = \"<your password>\"\n",
     "channel = \"<Your channel>\"\n",
-    "api_url = \"https://federated-sns-serverxx.research.global.fujitsu.com/xrpc\"\n",
+    "api_url = \"https://federated-sns-server[xx].research.global.fujitsu.com/xrpc\"\n",
     "token = \"<Your Azure AD token>\"\n",
-    "prompt_file = \"prompt/test_prompt1.txt\" # sample prompt file\n",
+    "prompt_file = \"input/test-prompt1.txt\" # sample prompt file\n",
     "client = Client(base_url=api_url)"
    ]
   },
