update README.md and sample.ipynb

--- a/sample.ipynb
+++ b/sample.ipynb
@@ -114,18 +114,42 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df68a65c",
+   "id": "81d0293a",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Log-in\n",
-    "try:\n",
-    "    profile = client.login(handle, password, portal_token=token)\n",
-    "    print(f\"Successfully logged in: {profile.handle}\")\n",
-    "    \n",
-    "except Exception as e :\n",
-    "    print(e)\n",
+    "profile = client.login(handle, password, portal_token=token)\n",
+    "print(f\"Successfully logged in: {profile.handle}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "73d702bf",
+   "metadata": {},
+   "source": [
+    "If you encounter the following error, please check the related parameters:\n",
     "\n",
+    "```\n",
+    "TypeError: XrpcError.__init__() missing 1 required positional argument: 'message'\n",
+    "```\n",
+    "\n",
+    "Please check whether `token` is valid. The token expires in 24 hours, so refresh it if it expires.\n",
+    "\n",
+    "```\n",
+    "UnauthorizedError:  Response(success=False, status_code=401, content=XrpcError(error='AuthenticationRequired', message='Invalid identifier or password') ...\n",
+    "```\n",
+    "\n",
+    "Please check whether `handle` and/or `password` is correct, and whether the domain of `api_url` is same as the domain of your handle name.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "df68a65c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# List joined channels\n",
     "response = client.app.fujitsu.channel.list_channel_info()\n",
     "joined_channel_list = [cinfo.channel_handle for cinfo in response.channel_info if channel in cinfo.channel_handle ]\n",
